--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,16 @@ matrix:
   include:
     - python: 3.5
       env:
-      - TOXENV=py35
+        - TOXENV=py35
+
     - python: 3.6
       env:
-      - TOXENV=py36
+        - TOXENV=py36
+
+    - python: 3.7
+      env:
+        - TOXENV=py37
+
+    - python: 3.8
+      env:
+      - TOXENV=py38
