--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,8 @@
 [tox]
-envlist = py35, py36
+envlist = py35, py36, py37, py38
 
 [testenv]
 deps = -rrequirements.txt
        -rrequirements_test.txt
 
-commands = pytest --pep8 --flakes --cov=uuid_shortener .
+commands = pytest --flakes --cov=uuid_shortener --cov-fail-under=100 tests
