--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: python
 sudo: false
-dist: trusty
+dist: Xenial
 
 install:
   - pip install tox
@@ -10,10 +10,6 @@ script:
 
 matrix:
   include:
-    - python: 3.5
-      env:
-        - TOXENV=py35
-
     - python: 3.6
       env:
         - TOXENV=py36
