Add dependencies freshness test

--- a/tox.ini
+++ b/tox.ini
@@ -4,5 +4,7 @@ envlist = py36, py37, py38
 [testenv]
 deps = -rrequirements.txt
        -rrequirements_test.txt
+       libyear
 
 commands = pytest --flakes --cov=uuid_shortener --cov-fail-under=100 tests
+           libyear -r requirements.txt
