--- a/tox.ini
+++ b/tox.ini
@@ -7,4 +7,4 @@ deps = -rrequirements.txt
        libyear
 
 commands = pytest --flakes --cov=uuid_shortener --cov-fail-under=100 tests
-           libyear -r requirements.txt
+           libyear -r requirements.txt | grep "Your system is up-to-date" || exit 1
